tests/baselines/reference/contextualTypingOfConditionalExpression(strict=true).errors.txt
contextualTypingOfConditionalExpression.ts(4,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
contextualTypingOfConditionalExpression.ts(7,5): error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
contextualTypingOfConditionalExpression.ts(10,5): error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.


==== contextualTypingOfConditionalExpression.ts (3 errors) ====
    var x: (a: number) => void = true ? (a) => a.toExponential() : (b) => b.toFixed();
    
    class A {
        foo: number;
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    class B extends A {
        bar: number;
        ~~~
!!! error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
    }
    class C extends A {
        baz: number;
        ~~~
!!! error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.
    }
    
    var x2: (a: A) => void = true ? (a) => a.foo : (b) => b.foo;
    